--- a/app/Resources/views/user/user_registration.html.twig
+++ b/app/Resources/views/user/user_registration.html.twig
@@ -29,21 +29,21 @@
 							<div class="form_signup">
 								{{ form_start(form, {'method': 'POST', 'attr': {'novalidate': 'novalidate'}}) }}
 								<div id="user_SignUp">
-									<div class="form-group {% if not form.name.vars.valid %}has-error{% else %}has-success{% endif %}">
+									<div class="form-group {% if not form.name.vars.valid %}has-error{% endif %}">
 										{{ form_label(form.name, 'Name', {'label_attr': {'class': 'col-sm-4'}}) }}
 										<div class="col-sm-7">
 											{{ form_widget(form.name) }}
 											{{ form_errors(form.name) }}
 										</div>
 									</div>
-									<div class="form-group {% if not form.lastName.vars.valid %}has-error{% else %}has-success{% endif %}">
+									<div class="form-group {% if not form.lastName.vars.valid %}has-error{% endif %}">
 										{{ form_label(form.lastName, 'Last Name', {'label_attr': {'class': 'col-sm-4'}}) }}
 										<div class="col-sm-7">
 											{{ form_widget(form.lastName) }}
 											{{ form_errors(form.lastName) }}
 										</div>
 									</div>
-									<div class="form-group {% if not form.email.vars.valid %}has-error{% else %}has-success{% endif %}">
+									<div class="form-group {% if not form.email.vars.valid %}has-error{% endif %}">
 										{{ form_label(form.email, 'Email', {'label_attr': {'class': 'col-sm-4'}}) }}
 										<div class="col-sm-7">
 											{{ form_widget(form.email) }}
@@ -57,7 +57,7 @@
 											{{ form_errors(form.password) }}
 										</div>
 									</div>
-									<div class="form-group {% if not form.playingLevel.vars.valid %}has-error{% else %}has-success{% endif %}">
+									<div class="form-group {% if not form.playingLevel.vars.valid %}has-error{% endif %}">
 										{{ form_label(form.playingLevel, 'Playing Level', {'label_attr': {'class': 'col-sm-4'}}) }}
 										<div class="col-sm-3">
 											{{ form_widget(form.playingLevel) }}
@@ -65,21 +65,21 @@
 										</div>
 										<div class="col-sm-5 col-sm-offset-4">{{ form_errors(form.playingLevel) }}</div>
 									</div>
-									<div class="form-group {% if not form.gender.vars.valid %}has-error{% else %}has-success{% endif %}">
+									<div class="form-group {% if not form.gender.vars.valid %}has-error{% endif %}">
 										{{ form_label(form.gender, 'Gender', {'label_attr': {'class': 'col-sm-4'}}) }}
 										<div class="col-sm-7">
 											{{ form_widget(form.gender) }}
 											{{ form_errors(form.gender) }}
 										</div>
 									</div>
-									<div class="form-group {% if not form.country.vars.valid %}has-error{% else %}has-success{% endif %}">
+									<div class="form-group {% if not form.country.vars.valid %}has-error{% endif %}">
 										{{ form_label(form.country, 'Country', {'label_attr': {'class': 'col-sm-4'}}) }}
 										<div class="col-sm-7">
 											{{ form_widget(form.country) }}
 											{{ form_errors(form.country) }}
 										</div>
 									</div>
-									<div class="form-group {% if not form.city.vars.valid %}has-error{% else %}has-success{% endif %}">
+									<div class="form-group {% if not form.city.vars.valid %}has-error{% endif %}">
 										{{ form_label(form.city, 'City', {'label_attr': {'class': 'col-sm-4'}}) }}
 										<div class="col-sm-7">
 											{{ form_widget(form.city) }}
