--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -47,9 +47,6 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-4 col-sm-offset-4">
-				{% if error %}
-    				<div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-				{% endif %}
 				<div class="panel panel-primary login_box">
 					<div class="panel-heading">
 						<h3 class="panel-title">Login</h3>
@@ -67,6 +64,9 @@
     							<div class="col-sm-9">
     								<input type="password" class="form-control" id="password" name="_password" />
     							</div>
+								{% if error %}
+    								<p class="text-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</p>
+								{% endif %}
     						</div>
     						<div class="form-group">
         						{# <input type="hidden" name="_target_path" value="/" /> #}
