Adding title tag

--- a/app/Resources/views/user/user_registration.html.twig
+++ b/app/Resources/views/user/user_registration.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Squash Connection - Player Sign Up{% endblock %}
+
 {% block body_id 'user_signUp' %}
 
 {% block header %}
