--- a/app/Resources/views/default/_header_general_pages.html.twig
+++ b/app/Resources/views/default/_header_general_pages.html.twig
@@ -9,7 +9,8 @@
 					<span class="icon-bar"></span>
 				</button>
 					<a class="navbar-brand" href="{{ path('homepage') }}">
-						<img id="logo" src="images/logotipo.png">
+						<img id="logo" src="{{ asset('images/logotipo.png') }}" class="hidden-xs">
+						<img id="logo" src="{{ asset('images/logotipo-xs.png') }}" class="visible-xs">
 					</a>
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
