Styling language dropdown list

--- a/app/Resources/views/user/_header_user_homepage.html.twig
+++ b/app/Resources/views/user/_header_user_homepage.html.twig
@@ -22,8 +22,8 @@
 							<b class="caret"></b>
 						</a>
 						<ul class="dropdown-menu">
-							<li><a href="#"><span class="glyphicon glyphicon-user"><span>Edit User</a></li>
-							<li><a href="{{ path('logout') }}"><span class="glyphicon glyphicon-log-out"></span>Logout</a></li>
+							<li><a href="#"><span class="glyphicon glyphicon-user"></span><span>Edit User</span></a></li>
+							<li><a href="{{ path('logout') }}"><span class="glyphicon glyphicon-log-out"></span><span>Logout</span></a></li>
 						</ul>
 					</li>
 					<li>
@@ -39,9 +39,9 @@
 						<ul class="dropdown-menu">
 							<li class="dropdown-header">Language</li>
 							<li class="divider"></li>
-							<li><a href="#"><span class="flag-icon flag-icon-gb"></span>English</a></li>
-							<li><a href="#"><span class="flag-icon flag-icon-es"></span>Spanish</a></li>
-							<li><a href="#"><span class="flag-icon flag-icon-nl"></span>Dutch</a></li>
+							<li><a href="#"><span class="flag-icon flag-icon-gb"></span><span>  English</span></a></li>
+							<li><a href="#"><span class="flag-icon flag-icon-es"></span><span>  Spanish</span></a></li>
+							<li><a href="#"><span class="flag-icon flag-icon-nl"></span><span>  Dutch</span></a></li>
 						</ul>
 					</li>
 				</ul>
