--- a/app/Resources/views/default/_header_general_pages.html.twig
+++ b/app/Resources/views/default/_header_general_pages.html.twig
@@ -23,9 +23,9 @@
 						<ul class="dropdown-menu">
 							<li class="dropdown-header">Language</li>
 							<li class="divider"></li>
-							<li><a href="#"><span class="flag-icon flag-icon-gb"></span>English</a></li>
-							<li><a href="#"><span class="flag-icon flag-icon-es"></span>Spanish</a></li>
-							<li><a href="#"><span class="flag-icon flag-icon-nl"></span>Dutch</a></li>
+							<li><a href="#"><span class="flag-icon flag-icon-gb"></span><span>  English</span></a></li>
+							<li><a href="#"><span class="flag-icon flag-icon-es"></span><span>  Spanish</span></a></li>
+							<li><a href="#"><span class="flag-icon flag-icon-nl"></span><span>  Dutch</span></a></li>
 						</ul>
 					</li>
 				</ul>
