Adding Star Rating for Playing Level in player Form

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -18,7 +18,8 @@
 			 	'css/flag-icon.css'	
 			 	'css/font-awesome.css'
 			 	'css/522ed01.css'
-			 	'css/jumbotron.css'	
+			 	'css/jumbotron.css'
+			 	'css/rating.css'	
 			 	filter='cssrewrite' %}
 				<link rel="stylesheet" href="{{ asset_url }}" />
 			{% endstylesheets %}
@@ -91,6 +92,7 @@
 				'js/jquery.js' 
 				'js/bootstrap.js'
 				'js/dd00e43.js'
+				'js/rating.js'
 			%}
 				<script src="{{ asset_url }}"></script>
 			{% endjavascripts %}	
