Added new dropdown menu

--- a/app/Resources/views/user/_header_user_homepage.html.twig
+++ b/app/Resources/views/user/_header_user_homepage.html.twig
@@ -17,6 +17,18 @@
 				<ul class="nav navbar-nav navbar-right">
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+							Menu
+							<b class="caret"></b>
+						</a>
+						<ul class="dropdown-menu">
+							<li><a href="#">My Matches</a></li>
+							<li><a href="#">Matches</a></li>
+							<li><a href="#">Ranking</a></li>
+							<li><a href="#">Challenges</a></li>
+						</ul>
+					</li>
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 							<span class="glyphicon glyphicon-user"><span>
 								{{ app.user.name }}
 							<b class="caret"></b>
