--- a/app/Resources/views/user/user_homepage.html.twig
+++ b/app/Resources/views/user/user_homepage.html.twig
@@ -15,6 +15,11 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-8 col-sm-offset-2">
+				Hola
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-8 col-sm-offset-2">
 				<table class="table table-striped table-bordered">
 					<thead>
 						<tr>
@@ -31,8 +36,8 @@
 								<td>{{ player.name }} {{ player.lastName }}</td>
 								<td>{{ player.gender.name }}</td>
 								<td>{{ player.country.name }}</td>
-								<td>{{ player.playingLevel }}</td>
-								<td><span class="glyphicon glyphicon-envelope"></span></td>
+								<td>{{ player.playingLevel|rating(player.playingLevel, 'fa-lg') }}</td>
+								<td><a class="btn btn-success" href="{{ path('challenge', {'slug': player.id}) }}">Challenge</a></td>
 							</tr>
 						{% endfor %}
 					</tbody>	
