change of body class for users registration

--- a/app/Resources/views/default/submitted_registration.html.twig
+++ b/app/Resources/views/default/submitted_registration.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %} Squash Connection - Homepage {% endblock %}
 
-{% block body_id 'correct_registration'%}
+{% block body_id 'registration'%}
 
 {% block header %}
 	{% include 'default/_header_general_pages.html.twig' %}
