--- a/app/Resources/views/user/_header_user_homepage.html.twig
+++ b/app/Resources/views/user/_header_user_homepage.html.twig
@@ -8,7 +8,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-					<a class="navbar-brand" href="{{ path('homepage') }}">
+					<a class="navbar-brand" href="{{ path('user_homepage') }}">
 						<img id="logo" src="{{ asset('images/logotipo.png') }}" class="hidden-xs">
 						<img id="logo" src="{{ asset('images/logotipo-xs.png') }}" class="visible-xs">
 					</a>
@@ -24,7 +24,7 @@
 							<li><a href="#">My Matches</a></li>
 							<li><a href="#">Matches</a></li>
 							<li><a href="#">Ranking</a></li>
-							<li><a href="#">Challenges</a></li>
+							<li><a href="{{ path('challenge_list') }}">Challenges</a></li>
 						</ul>
 					</li>
 					<li class="dropdown">
