--- a/app/Resources/views/user/user_challenge.html.twig
+++ b/app/Resources/views/user/user_challenge.html.twig
@@ -9,5 +9,71 @@
 {% endblock %}
 
 {% block body %}
-	Hola {{ slug }}
+	<div class="content">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-10 col-sm-offset-1">
+					<div class="panel panel-primary">
+						<div class="panel-body">
+							<div class="row">
+								<div class="col-sm-12 col-sm-offset-1">
+									<div class="media">
+									  <div class="media-left">									    
+									      <img class="media-object" src="{{ asset('images/logotipo.png') }}" alt="..." width="80" height="100">								    
+									  </div>
+									  <div class="media-body">
+									  	<div class="row">
+										    <div class="col-sm-4">
+												<p><strong>Name:</strong> {{ player.name }} {{ player.lastName }}. </p>
+											</div>
+											<div class="col-sm-3">
+												<p><strong>Gender:</strong> {{ player.gender.name }}.</p>
+											</div>
+											<div class="col-sm-3">
+												<strong>Level:</strong>{{ player.playingLevel|rating(player.playingLevel, 'fa-lg') }}
+											</div>
+										</div> 
+										<div class="row">
+											
+												<div class="col-sm-4">
+													<p><strong>Favourite Club:</strong> {{ player.club }}.</p>
+												</div>
+												<div class="col-sm-3">
+													<p><strong>Win:</strong> 3 matches.</p>
+												</div>
+												<div class="col-sm-4">
+													<p><strong>Lost:</strong> 2 matches.</p>
+												</div>
+											
+										</div> 
+										<div class="row">
+											<div class="col-sm-9">
+												<div class="progress">											
+												  <div class="progress-bar progress-bar-success" style="width: 60%">
+												    60% Matches won.
+												  </div>
+												  <div class="progress-bar progress-bar-danger" style="width: 40%">
+												    40% Matches lost.
+												  </div>
+												</div>
+											</div>
+										</div>  
+									  </div>
+									</div>
+								</div>
+								
+								<div class="col-sm-12">
+									<hr>
+									{% form_theme form 'form_user_challenge.html.twig' %}
+									{{ form_start(form) }}
+									<input type="hidden" name="player2" value="{{ player.id }}">
+									{{ form_end(form) }}
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 {% endblock body %}
