--- a/app/Resources/views/challenge/my_challenge_list.html.twig
+++ b/app/Resources/views/challenge/my_challenge_list.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Squash Connection - Challenges{% endblock %}
+{% block title %}Squash Connection - My Challenges{% endblock %}
 
-{% block body_id 'challenge_list' %}
+{% block body_id 'my_challenge_list' %}
 
 {% block header %}
 	{% include 'user/_header_user_homepage.html.twig' %}
@@ -17,7 +17,7 @@
 						<div class="panel-body">
 							<div class="row">
 								<div class="col-sm-10 col-sm-offset-1">
-									<u><h1>Challenges.</h1></u>
+									<u><h1>My Challenges</h1></u>
 									{% if challenges is not empty %}
 									<table class="table table-striped table-bordered">
 										<thead>
@@ -26,7 +26,7 @@
 												<th>Club</th>
 												<th>Date</th>
 												<th>Time</th>
-												<th>Accept/Deny</th>
+												<th>Answer</th>
 											</tr>
 										</thead>
 									{% for challenge in challenges %}
@@ -36,14 +36,21 @@
 											<td>{{ challenge.date|date('l, jS F Y') }}</td>
 											<td>{{ challenge.time|date('H:i') }}</td>
 											<td>
-												<a class="btn btn-success btn-xs" href="{{ path('challenge_accept', {'slug': challenge.id}) }}">Accept</a>
-												<a class="btn btn-danger btn-xs" href="{{ path('challenge_deny', {'slug': challenge.id}) }}">Deny</a>
+												{% if challenge.status == 'Accepted' %}
+													<p class="text-success">{{ challenge.status }}</p>
+												{% endif %}
+												{% if challenge.status == 'Denied' %}
+													<p class="text-danger">{{ challenge.status }}</p>
+												{% endif %}
+												{% if challenge.status is null %}
+													<p class="text-warning">No answer yet</p>
+												{% endif %}													
 											</td>
 										</tr>
 									{% endfor %}
 									</table>
 									{% else %}
-										<h6>There are not new challenges for you.</h6>
+										<h6>You haven't challenged someone yet.</h6>
 									{% endif %}
 								</div>
 							</div>
