Adding menu items

--- a/app/Resources/views/user/_header_user_homepage.html.twig
+++ b/app/Resources/views/user/_header_user_homepage.html.twig
@@ -21,10 +21,11 @@
 							<b class="caret"></b>
 						</a>
 						<ul class="dropdown-menu">
-							<li><a href="#">My Matches</a></li>
-							<li><a href="#">Matches</a></li>
-							<li><a href="#">Ranking</a></li>
 							<li><a href="{{ path('challenge_list') }}">Challenges</a></li>
+							<li><a href="{{ path('my_challenge_list') }}">My Challenges</a></li>
+							<li><a href="#">My Matches</a></li>
+							<li><a href="#">Matches Results</a></li>
+							<li><a href="#">Ranking</a></li>
 						</ul>
 					</li>
 					<li class="dropdown">
