--- a/app/Resources/views/user/user_registration.html.twig
+++ b/app/Resources/views/user/user_registration.html.twig
@@ -50,7 +50,7 @@
 										</div>
 									</div>
 
-									<div class="form-group {% if not form.password.vars.valid %}has-error{% endif %}">
+									<div class="form-group {% if not form.club.vars.valid %}has-error{% endif %}">
 										{{ form_label(form.club, 'Favourite Club', {'label_attr': {'class': 'col-sm-4'}}) }}
 										<div class="col-sm-7">
 											{{ form_widget(form.club) }}
