Change of Usuario Entity for User

--- a/app/Resources/views/challenge/challenge_list.html.twig
+++ b/app/Resources/views/challenge/challenge_list.html.twig
@@ -31,7 +31,7 @@
 										</thead>
 									{% for challenge in challenges %}
 										<tr>
-											<td>{{ challenge.name }} {{ challenge.lastName }}</td>
+											<td>{{ challenge.player1Name }} {{ challenge.player1lastName }}</td>
 											<td>{{ challenge.clubName }}</td>
 											<td>{{ challenge.date|date('l, jS F Y') }}</td>
 											<td>{{ challenge.time|date('H:i') }}</td>
