--- a/app/Resources/views/challenge/challenge_list.html.twig
+++ b/app/Resources/views/challenge/challenge_list.html.twig
@@ -26,6 +26,7 @@
 												<th>Club</th>
 												<th>Date</th>
 												<th>Time</th>
+												<th>Messages</th>
 												<th>Accept/Deny</th>
 											</tr>
 										</thead>
@@ -35,6 +36,12 @@
 											<td>{{ challenge.clubName }}</td>
 											<td>{{ challenge.date|date('l, jS F Y') }}</td>
 											<td>{{ challenge.time|date('H:i') }}</td>
+											<td>												
+												<a href="#"> 
+													Messages
+													<span class="badge"></span>
+												</a>
+											</td>
 											<td>
 												<a class="btn btn-success btn-xs" href="{{ path('challenge_accept', {'slug': challenge.id}) }}">Accept</a>
 												<a class="btn btn-danger btn-xs" href="{{ path('challenge_deny', {'slug': challenge.id}) }}">Deny</a>
