Started Match Functionaity Implementation

--- a/app/Resources/views/user/_header_user_homepage.html.twig
+++ b/app/Resources/views/user/_header_user_homepage.html.twig
@@ -23,7 +23,7 @@
 						<ul class="dropdown-menu">
 							<li><a href="{{ path('challenge_list') }}">Challenges</a></li>
 							<li><a href="{{ path('my_challenge_list') }}">My Challenges</a></li>
-							<li><a href="#">My Matches</a></li>
+							<li><a href="{{ path('match_list') }}">My Matches</a></li>
 							<li><a href="#">Matches Results</a></li>
 							<li><a href="#">Ranking</a></li>
 						</ul>
