--- a/app/Resources/views/match/my_matches_list.html.twig
+++ b/app/Resources/views/match/my_matches_list.html.twig
@@ -12,11 +12,7 @@
 	<div class="content">
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-12">
-					<div class="panel panel-primary">
-						<div class="panel-body">
-							<div class="row">
-								<div class="col-sm-10 col-sm-offset-1">
+				<div class="col-sm-12">												
 									<u><h1>Coming Matches</h1></u>
 									{% if matches is not empty %}
 									<table class="table table-striped table-bordered">
@@ -45,15 +41,10 @@
 												</a>
 											</td>
 											<td>
-												{% if match.status == 'Accepted' %}
-													<p class="text-success">{{ match.status }}</p>
-												{% endif %}
-												{% if match.status == 'Denied' %}
-													<p class="text-danger">{{ match.status }}</p>
-												{% endif %}
-												{% if match.status is null %}
-													<p class="text-warning">No answer yet</p>
-												{% endif %}													
+												<div class="row">
+													<a href="#" class="btn btn-success" role="button">WIN</a>				
+													<a href="#" class="btn btn-danger" role="button">LOST</a>
+												</div>
 											</td>
 										</tr>
 									{% endfor %}
@@ -61,10 +52,52 @@
 									{% else %}
 										<h6>You haven't challenged someone yet.</h6>
 									{% endif %}
-								</div>
-							</div>
-						</div>
-					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-12">										
+									<u><h1>Played Matches</h1></u>
+									{% if playedMatches is not empty %}
+									<table class="table table-striped table-bordered">
+										<thead>
+											<tr>
+												<th>Player 1</th>
+												<th>Player 2</th>
+												<th>Club</th>
+												<th>Date</th>
+												<th>Time</th>
+												<th>Comments</th>
+												<th>Result</th>
+											</tr>
+										</thead>
+									{% for match in playedMatches %}
+									{# Setting up the class the row will have #}										
+										{% if match.result == 'WON' %}
+											{% set clase = 'success' %}
+										{% else %}
+											{% set clase = 'danger' %}
+										{% endif %}		
+										<tr class="{{ clase }}">
+											<td>{{ match.player1Name }} {{ match.player1lastName }}</td>
+											<td>{{ match.player2Name }} {{ match.player2lastName }}</td>
+											<td>{{ match.clubName }}</td>
+											<td>{{ match.date|date('l, jS F Y') }}</td>
+											<td>{{ match.time|date('H:i') }}</td>
+											<td>												
+												<a href="#"> 
+													Comments
+													<span class="badge"></span>
+												</a>
+											</td>
+											<td class="success">
+												<strong>{{ match.result }}</strong>
+											</td>
+										</tr>
+									{% endfor %}
+									</table>
+									{% else %}
+										<h6>You haven't played any match yet.</h6>
+									{% endif %}
 				</div>
 			</div>
 		</div>
