--- a/app/Resources/views/default/_header_homepage.html.twig
+++ b/app/Resources/views/default/_header_homepage.html.twig
@@ -23,9 +23,9 @@
 						<ul class="dropdown-menu">
 							<li class="dropdown-header">Language</li>
 							<li class="divider"></li>
-							<li><a href="#"><span class="flag-icon flag-icon-gb"></span><span>  English</span></a></li>
-							<li><a href="#"><span class="flag-icon flag-icon-es"></span><span>  Spanish</span></a></li>
-							<li><a href="#"><span class="flag-icon flag-icon-nl"></span><span>  Dutch</span></a></li>
+							<li><a href="{{ path('homepage') }}en"><span class="flag-icon flag-icon-gb"></span><span>{{ 'language.en'|trans }}</span></a></li>
+							<li><a href="{{ path('homepage') }}es"><span class="flag-icon flag-icon-es"></span><span>{{ 'language.es'|trans }}</span></a></li>
+							<li><a href="{{ path('homepage') }}nl"><span class="flag-icon flag-icon-nl"></span><span>{{ 'language.nl'|trans }}</span></a></li>
 						</ul>
 					</li>
 				</ul>
@@ -33,13 +33,13 @@
 					<li>
 						<a href="{{ path('signup_player') }}">
 							<span class="glyphicon glyphicon-user"</span>
-							Sign Up
+							{{ 'player.subscription'|trans }}
 						</a>
 					</li>
 					<li>
 						<a href="{{ path('login_route') }}">
 							<span class="glyphicon glyphicon-log-in"></span>
-							Login
+							{{ 'nav.login'|trans }}
 						</a>
 					</li>
 				</ul>
