Deleting dump and modifying menu

--- a/app/Resources/views/user/_header_user_homepage.html.twig
+++ b/app/Resources/views/user/_header_user_homepage.html.twig
@@ -35,7 +35,7 @@
 							<b class="caret"></b>
 						</a>
 						<ul class="dropdown-menu">
-							<li><a href="#"><span class="glyphicon glyphicon-user"></span><span>Edit User</span></a></li>
+							<li><a href="#"><span class="glyphicon glyphicon-user"></span><span>Edit Profile</span></a></li>
 							<li><a href="{{ path('logout') }}"><span class="glyphicon glyphicon-log-out"></span><span>Logout</span></a></li>
 						</ul>
 					</li>
