--- a/app/Resources/views/admin/_header_admin_homepage.html.twig
+++ b/app/Resources/views/admin/_header_admin_homepage.html.twig
@@ -27,7 +27,7 @@
 						</ul>
 					</li>
 					<li>
-						<a href="#">
+						<a href="{{ path('user_messages') }}">
 							<span class="glyphicon glyphicon-envelope"></span>
 						</a>
 					</li>				
