--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -13,7 +13,7 @@
 {% block body %}
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-4 col-sm-offset-4">
+			<div class="col-md-4 col-md-offset-4">
 				<div class="panel panel-primary login_box">
 					<div class="panel-heading">
 						<h3 class="panel-title">Login</h3>
@@ -21,14 +21,14 @@
 					<div class="panel-body">
 						<form class="form-horizontal" action="{{ path('login_check') }}" method="post">
 							<div class="form-group">
-    							<label for="username" class="col-sm-3 control-label">Username</label>
-    							<div class="col-sm-9">
+    							<label for="username" class="col-md-3 control-label">Username</label>
+    							<div class="col-md-9">
     								<input type="text" class="form-control" id="username" name="_username" value="{{ last_username }}" />
     							</div>
     						</div>
     						<div class="form-group {% if error %}has-error{% endif %}">
-    							<label for="password" class="col-sm-3 control-label">Password</label>
-    							<div class="col-sm-9">
+    							<label for="password" class="col-md-3 control-label">Password</label>
+    							<div class="col-md-9">
     								<input type="password" class="form-control" id="password" name="_password" />
     								{% if error %}
     									<span class="help-block">
@@ -43,7 +43,7 @@
     						</div>
     						<div class="form-group">
         						<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}" /> 
-        						<div class="col-sm-3 col-sm-offset-5">
+        						<div class="col-md-3 col-md-offset-5">
 	    							<button type="submit" class="btn btn-primary">Login</button>
     							</div>
     						</div>
