--- a/app/Resources/views/user/user_registration.html.twig
+++ b/app/Resources/views/user/user_registration.html.twig
@@ -12,7 +12,7 @@
 	<div class="content">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-5 col-md-offset-4">
+				<div class="col-md-8 col-md-offset-2">
 					<div class="panel panel-primary">
 						<div class="panel-heading">
 							<h3 class="panel-title">Create Account</h3>				
@@ -22,74 +22,74 @@
 								{{ form_start(form, {'method': 'POST', 'attr': {'novalidate': 'novalidate'}}) }}
 								<div id="user_SignUp">
 									<div class="form-group {% if not form.name.vars.valid %}has-error{% endif %}">
-										{{ form_label(form.name, 'Name', {'label_attr': {'class': 'col-sm-4'}}) }}
-										<div class="col-sm-7">
+										{{ form_label(form.name, 'Name', {'label_attr': {'class': 'col-md-3'}}) }}
+										<div class="col-md-7">
 											{{ form_widget(form.name) }}
 											{{ form_errors(form.name) }}
 										</div>
 									</div>
 									<div class="form-group {% if not form.lastName.vars.valid %}has-error{% endif %}">
-										{{ form_label(form.lastName, 'Last Name', {'label_attr': {'class': 'col-sm-4'}}) }}
-										<div class="col-sm-7">
+										{{ form_label(form.lastName, 'Last Name', {'label_attr': {'class': 'col-md-3'}}) }}
+										<div class="col-md-7">
 											{{ form_widget(form.lastName) }}
 											{{ form_errors(form.lastName) }}
 										</div>
 									</div>
 									<div class="form-group {% if not form.email.vars.valid %}has-error{% endif %}">
-										{{ form_label(form.email, 'Email', {'label_attr': {'class': 'col-sm-4'}}) }}
-										<div class="col-sm-7">
+										{{ form_label(form.email, 'Email', {'label_attr': {'class': 'col-md-3'}}) }}
+										<div class="col-md-7">
 											{{ form_widget(form.email) }}
 											{{ form_errors(form.email) }}
 										</div>
 									</div>
 									<div class="form-group {% if not form.password.vars.valid %}has-error{% endif %}">
-										{{ form_label(form.password, 'Password', {'label_attr': {'class': 'col-sm-4'}}) }}
-										<div class="col-sm-7">
+										{{ form_label(form.password, 'Password', {'label_attr': {'class': 'col-md-3'}}) }}
+										<div class="col-md-7">
 											{{ form_widget(form.password) }}
 											{{ form_errors(form.password) }}
 										</div>
 									</div>
 
 									<div class="form-group {% if not form.club.vars.valid %}has-error{% endif %}">
-										{{ form_label(form.club, 'Favourite Club', {'label_attr': {'class': 'col-sm-4'}}) }}
-										<div class="col-sm-7">
+										{{ form_label(form.club, 'Favourite Club', {'label_attr': {'class': 'col-md-3'}}) }}
+										<div class="col-md-7">
 											{{ form_widget(form.club) }}
 											{{ form_errors(form.club) }}
 										</div>
 									</div>
 									
 									<div class="form-group {% if not form.playingLevel.vars.valid %}has-error{% endif %}">
-										{{ form_label(form.playingLevel, 'Playing Level', {'label_attr': {'class': 'col-sm-4'}}) }}
-										<div class="col-sm-5">
+										{{ form_label(form.playingLevel, 'Playing Level', {'label_attr': {'class': 'col-md-3'}}) }}
+										<div class="col-md-5">
 											{{ form_widget(form.playingLevel) }}
 											
 										</div>
-										<div class="col-sm-5 col-sm-offset-4">{{ form_errors(form.playingLevel) }}</div>
+										<div class="col-md-5 col-md-offset-4">{{ form_errors(form.playingLevel) }}</div>
 									</div>
 									<div class="form-group {% if not form.gender.vars.valid %}has-error{% endif %}">
-										{{ form_label(form.gender, 'Gender', {'label_attr': {'class': 'col-sm-4'}}) }}
-										<div class="col-sm-7">
+										{{ form_label(form.gender, 'Gender', {'label_attr': {'class': 'col-md-3'}}) }}
+										<div class="col-md-7">
 											{{ form_widget(form.gender) }}
 											{{ form_errors(form.gender) }}
 										</div>
 									</div>
 									<div class="form-group {% if not form.country.vars.valid %}has-error{% endif %}">
-										{{ form_label(form.country, 'Country', {'label_attr': {'class': 'col-sm-4'}}) }}
-										<div class="col-sm-7">
+										{{ form_label(form.country, 'Country', {'label_attr': {'class': 'col-md-3'}}) }}
+										<div class="col-md-7">
 											{{ form_widget(form.country) }}
 											{{ form_errors(form.country) }}
 										</div>
 									</div>
 									<div class="form-group {% if not form.city.vars.valid %}has-error{% endif %}">
-										{{ form_label(form.city, 'City', {'label_attr': {'class': 'col-sm-4'}}) }}
-										<div class="col-sm-7">
+										{{ form_label(form.city, 'City', {'label_attr': {'class': 'col-md-3'}}) }}
+										<div class="col-md-7">
 											{{ form_widget(form.city) }}
 											{{ form_errors(form.city) }}
 										</div>
 									</div>
 									<div class="form-group">
 										</br>
-										<div class="col-sm-3 col-sm-offset-4">
+										<div class="col-md-3 col-md-offset-3">
 											{{ form_widget(form.send, {'attr': {'class': 'btn-primary'}, 'label': 'Sign Up'}) }}
 										</div>
 									</div>
