Styles better from prod enviroment

--- a/app/Resources/views/admin/_header_admin_homepage.html.twig
+++ b/app/Resources/views/admin/_header_admin_homepage.html.twig
@@ -14,8 +14,21 @@
 					</a>
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
-				<ul class="nav navbar-nav navbar-right">
-					
+				<ul class="nav navbar-nav navbar-right">					
+					<li>
+						<a href="{{ path('admin_homepage') }}"><span class="glyphicon glyphicon-home"></span></a>
+					</li>
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+							Menu
+							<b class="caret"></b>
+						</a>
+						<ul class="dropdown-menu">
+							<li><a href="{{ path('challenge_list') }}">Challenges</a></li>
+							<li><a href="{{ path('my_challenge_list') }}">My Challenges</a></li>
+							<li><a href="{{ path('match_list') }}">My Matches</a></li>
+						</ul>
+					</li>
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 							<span class="glyphicon glyphicon-user"><span>
