--- a/app/Resources/views/match/my_matches_list.html.twig
+++ b/app/Resources/views/match/my_matches_list.html.twig
@@ -12,7 +12,7 @@
 	<div class="content">
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-12">												
+				<div class="col-md-12">												
 									<u><h1>Matches</h1></u>
 									{% set counter = 0 %}
 									{% for match in matches %}
@@ -63,7 +63,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-sm-12" id="played-container">										
+				<div class="col-md-12" id="played-container">										
 									<u><h1>Played Matches</h1></u>
 									{% if playedMatches is not empty %}
 									<table class="table table-striped table-bordered" id="played">
