--- a/app/Resources/views/admin/admin_searched_players_list.html.twig
+++ b/app/Resources/views/admin/admin_searched_players_list.html.twig
@@ -14,30 +14,43 @@
 <div class="content">
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-12">
+			<div class="col-md-12">
 				<div class="panel panel-primary">
 					<div class="panel-heading">
 						<h3 class="panel-title">Search Players</h3>
 					</div>
 					<div class="panel-body">
 						{% form_theme form 'bootstrap_3_layout.html.twig' %}
-						{{form_start(form,{'method': 'POST', 'attr': {'novalidate': 'novalidate', 'class': 'form-inline'}})}}
+						{{form_start(form,{'method': 'POST', 'attr': {'novalidate': 'novalidate', 'class': 'form-horizontal'}})}}
 						<div class="form-group">
-						{{ form_label(form.country, 'Country:', {'label_attr': {'class': 'col-sm-4'}}) }}
+						{{ form_label(form.country, 'Country:', {'label_attr': {'class': 'col-md-3'}}) }}
+						<div class="col-md-7">
 						{{ form_widget(form.country) }}
+						</div>
 						{{ form_errors(form.country) }}
 					</div>
 					<div class="form-group">
-						{{ form_label(form.club, 'Club:', {'label_attr': {'class': 'col-sm-4'}}) }}
+						{{ form_label(form.club, 'Club:', {'label_attr': {'class': 'col-md-3'}}) }}
+						<div class="col-md-7">
 						{{ form_widget(form.club) }}
+						</div>
 						{{ form_errors(form.club) }}
 					</div>
-						{{ form_label(form.gender, 'Gender:', {'label_attr': {'class': 'col-sm-4'}}) }}
+					<div class="form-group">
+						{{ form_label(form.gender, 'Gender:', {'label_attr': {'class': 'col-md-3'}}) }}
+						<div class="col-md-7">											
 						{{ form_widget(form.gender) }}
 						{{ form_errors(form.gender) }}
-						{{ form_label(form.level, 'Level:', {'label_attr': {'class': 'col-sm-4'}}) }}
+						</div>
+					</div>
+					<div class="form-group">
+						{{ form_label(form.level, 'Level:', {'label_attr': {'class': 'col-md-3'}}) }}
+						<div class="col-md-7">
 						{{ form_widget(form.level) }}
 						{{ form_errors(form.level) }}
+						</div>
+					</div>
+					<div class="col-md-offset-3">						
 						{{ form_widget(form.search, {'attr': {'class': 'btn btn-primary'}}) }}						
 						{{ form_end(form) }}
 					</div>
@@ -46,7 +59,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-sm-8 col-sm-offset-2">
+			<div class="col-md-12">
 				<table class="table table-striped table-bordered">
 					<thead>
 						<tr>
@@ -73,7 +86,7 @@
 								<td>{{ player.city }}</td>
 								<td>{{ player.playingLevel|rating(player.playingLevel, 'fa-lg') }}</td>
 								<td id="status">{{ player.status }}</td>
-								<td><a class="btn btn-primary" href="{{ path('send_message') }}">Send Message</a></td>
+								<td><a class="btn btn-primary" href="{{ path('send_message', {'slug': player.id}) }}">Send Message</a></td>
 								<td><a class="btn btn-danger" href="#" onclick="lockUser({{ player.id }})">Lock</a></td>
 								<td><a class="btn btn-success" href="#" onclick="unlockUser({{ player.id }})">Unlock</a></td>
 							</tr>
