--- a/app/Resources/views/message/message_list.html.twig
+++ b/app/Resources/views/message/message_list.html.twig
@@ -12,11 +12,11 @@
 	<div class="content">
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-10 col-sm-offset-1">
+				<div class="col-md-12">
 					<div class="panel panel-primary">
 						<div class="panel-body">
 							<div class="row">
-								<div class="col-sm-10 col-sm-offset-1">
+								<div class="col-md-12">
 									<u><h1>Messages.</h1></u>
 									{% if messages is not empty %}
 									<table class="table table-striped table-bordered">
