--- a/app/Resources/views/message/message_read.html.twig
+++ b/app/Resources/views/message/message_read.html.twig
@@ -12,11 +12,11 @@
 	<div class="content">
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-10 col-sm-offset-1">
+				<div class="col-md-12">
 					<div class="panel panel-primary">
 						<div class="panel-body">
 							<div class="row">
-								<div class="col-sm-10 col-sm-offset-1">
+								<div class="col-md-12">
 									<h1>Message from {{ message[0].nameSender }} {{ message[0].lastNameSender }}.</h1>					
 									<div class="bg-info message">
 										<p>{{ message[0].message }}</p>
