--- a/app/Resources/views/user/_header_user_homepage.html.twig
+++ b/app/Resources/views/user/_header_user_homepage.html.twig
@@ -15,6 +15,9 @@
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
+					<li>
+						<a href="{{ path('user_homepage') }}"><span class="glyphicon glyphicon-home"></span></a>
+					</li>
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 							Menu
@@ -24,8 +27,6 @@
 							<li><a href="{{ path('challenge_list') }}">Challenges</a></li>
 							<li><a href="{{ path('my_challenge_list') }}">My Challenges</a></li>
 							<li><a href="{{ path('match_list') }}">My Matches</a></li>
-							<li><a href="#">Matches Results</a></li>
-							<li><a href="#">Ranking</a></li>
 						</ul>
 					</li>
 					<li class="dropdown">
@@ -35,7 +36,6 @@
 							<b class="caret"></b>
 						</a>
 						<ul class="dropdown-menu">
-							<li><a href="#"><span class="glyphicon glyphicon-user"></span><span>Edit Profile</span></a></li>
 							<li><a href="{{ path('logout') }}"><span class="glyphicon glyphicon-log-out"></span><span>Logout</span></a></li>
 						</ul>
 					</li>
