--- a/app/Resources/views/user/user_challenge.html.twig
+++ b/app/Resources/views/user/user_challenge.html.twig
@@ -12,42 +12,42 @@
 	<div class="content">
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-10 col-sm-offset-1">
+				<div class="col-md-12">
 					<div class="panel panel-primary">
 						<div class="panel-body">
 							<div class="row">
-								<div class="col-sm-12 col-sm-offset-1">
+								<div class="col-md-12 col-md-offset-1">
 									<div class="media">
 									  <div class="media-left">									    
-									      <img class="media-object" src="{{ asset('images/logotipo.png') }}" alt="..." width="80" height="100">								    
+									      <img class="media-object" src="{{ asset('images/noprofile.gif') }}" alt="..." width="80" height="100">								    
 									  </div>
 									  <div class="media-body">
 									  	<div class="row">
-										    <div class="col-sm-4">
+										    <div class="col-md-4">
 												<p><strong>Name:</strong> {{ player.name }} {{ player.lastName }}. </p>
 											</div>
-											<div class="col-sm-3">
+											<div class="col-md-3">
 												<p><strong>Gender:</strong> {{ player.gender.name }}.</p>
 											</div>
-											<div class="col-sm-3">
+											<div class="col-md-3">
 												<strong>Level:</strong>{{ player.playingLevel|rating(player.playingLevel, 'fa-lg') }}
 											</div>
 										</div> 
 										<div class="row">
 											
-												<div class="col-sm-4">
+												<div class="col-md-4">
 													<p><strong>Favourite Club:</strong> {{ player.club }}.</p>
 												</div>
-												<div class="col-sm-3">
-													<p><strong>Win:</strong> 3 matches.</p>
+												<div class="col-md-3">
+													<p><strong>Won:</strong> {{ won.won }} matches.</p>
 												</div>
-												<div class="col-sm-4">
-													<p><strong>Lost:</strong> 2 matches.</p>
+												<div class="col-md-4">
+													<p><strong>Lost:</strong> {{ lost.lost }} matches.</p>
 												</div>
 											
 										</div> 
 										<div class="row">
-											<div class="col-sm-9">
+											<div class="col-md-9">
 												<div class="progress">											
 												  <div class="progress-bar progress-bar-success" style="width: 60%">
 												    60% Matches won.
@@ -65,6 +65,37 @@
 								<div class="col-sm-12">
 									<hr>
 									{{ form_start(form) }}
+									<div class="form-group">
+										{{ form_label(form.date, 'Date:', {'label_attr': {'class': 'col-md-3'}}) }}
+										<div class="col-md-7">
+										{{ form_widget(form.date) }}
+										{{ form_errors(form.date) }}
+										</div>
+									</div>
+									<div class="form-group">
+										{{ form_label(form.time, 'Time:', {'label_attr': {'class': 'col-md-3'}}) }}
+										<div class="col-md-7">
+										{{ form_widget(form.time) }}
+										{{ form_errors(form.time) }}
+										</div>
+									</div>
+									<div class="form-group">
+										{{ form_label(form.club, 'Club:', {'label_attr': {'class': 'col-md-3'}}) }}
+										<div class="col-md-7">
+										{{ form_widget(form.club) }}
+										{{ form_errors(form.club) }}
+										</div>
+									</div>
+									<div class="form-group">
+										{{ form_label(form.message, 'Message:', {'label_attr': {'class': 'col-md-3'}}) }}
+										<div class="col-md-7">
+										{{ form_widget(form.message) }}
+										{{ form_errors(form.message) }}
+										</div>
+									</div>
+									<div class="col-md-offset-3">						
+										{{ form_widget(form.challenge, {'attr': {'class': 'btn btn-primary'}}) }}
+									</div>
 									<input type="hidden" name="player2" value="{{ player.id }}">
 									{{ form_end(form) }}
 								</div>
